# zerver/openapi/zulip.yaml
@@ -969,6 +969,48 @@ paths:
                         "result": "success",
                         "uri": "/user_uploads/1/4e/m2A3MSqFnWRLUf9SaPzQ0Up_/zulip.txt"
                     }
+  /user_uploads/{realm_id_str}/{filename}:
+    get:
+      description: |
+        Get a temporary URL for access to the file that doesn't require authentication.
+      parameters:
+      - name: realm_id_str
+        in: path
+        description: |
+          The realm id.
+        schema:
+          type: integer
+        example: 1
+        required: True
+      - name: filename
+        in: path
+        description: |
+          Path to the URL.
+        schema:
+          type: string
+        example: 4e/m2A3MSqFnWRLUf9SaPzQ0Up_/zulip.txt
+        required: True
+        responses:
+          '200':
+          description: Success.
+          content:
+            application/json:
+              schema:
+                allOf:
+                - $ref: '#/components/schemas/JsonSuccess'
+                - properties:
+                    url:
+                      type: string
+                      description: |
+                        A temporary URL that can be used to access the uploaded file
+                        without Zulip's normal API authentication.
+                - example:
+                    {
+                        "msg": "",
+                        "result": "success",
+                        "url": "/user_uploads/temporary/322F32632F39765378464E4C63306D3961396F4970705A4D74424565432F7A756C69702E7478743A316A5053616A3A3938625F44393446466D37357254315F4F414C425A4553464F6A55"
+                    }
+
   /users:
     get:
       description: Retrieve all users in a realm.
